--- a/files/db.conf
+++ b/files/db.conf
@@ -1,4 +1,5 @@
 host=127.0.0.1
-port=6543      # should be default port for PostgreSQL
+# should be default port for PostgreSQL
+port=5431
 user=app
-password=app123
+password=app
